# cycling_predictor

./: README.md  classes.py  dataset.py  maps.py  pyproject.toml
collectors/: __init__.py  base_collector.py  entry_collector.py
collectors/data/: entry_collector_classics_2023_2024_2025_50.json  entry_collector_giro_tour_vuelta_2023_2024_2025_100.json  rider_collector_giro_tour_vuelta_2025.json
cycling_predictor/: __init__.py  classes.py  maps.py
cycling_predictor/collectors/: entry_collector.py  rider_collector.py
cycling_predictor/collectors/data/: CPClassicEntryCollector_classics_2022_50.json  CPClassicEntryCollector_classics_2023_2024_2025_50.json  CPClassicEntryCollector_classics_2026.json  CPGTEntryCollector_giro_2026.json  CPGTEntryCollector_giro_2026_100.json  CPGTEntryCollector_paris_nice_tirreno_adriatico_2022_50.json  CPGTEntryCollector_paris_nice_tirreno_adriatico_2023_2024_2025_50.json  CPRiderCollector_giro_2026.json  (+9 more)
cycling_predictor/models/: base_model.py  xgb_model.py
cycling_predictor/predictions/: __init__.py  prediction.py
cycling_predictor/processors/: __init__.py  ensemble_predictor.py  kfold_processor.py  kfold_trainer.py  kfold_tuner.py  predictor.py  processor.py  selector.py  trainer.py
models/: __init__.py
predictions/: prediction.py
processors/: processor.py  selector.py
processors/data/: CPTrainer_classics_2023_2024_2025_50_0.2_20_sprint.json  CPTrainer_classics_2023_2024_2025_50_0.2_29_hills.json
scripts/: evaluate_predictions.py  optimize_cl_model.py  optimize_gt_model.py  train_cl_model.py  train_gt_model.py
(+36 files in other folders)
